--- a/app/src/main/res/layout/item_movies_trending.xml
+++ b/app/src/main/res/layout/item_movies_trending.xml
@@ -49,6 +49,7 @@
             app:layout_constraintEnd_toEndOf="@id/text_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_name"
+            app:formatDate="@{setData.release_date}"
             tools:text="2000" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
