--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="setSearchData"
             type="Boolean" />
@@ -24,7 +23,8 @@
             android:src="@drawable/ic_baseline_search"
             app:layout_constraintBottom_toTopOf="@id/home_top_area"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:contentDescription="@string/image_search" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -85,8 +85,7 @@
             app:layout_constraintBottom_toTopOf="@id/recyclerview"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/home_top_area"
-
-            />
+            android:contentDescription="@string/image_category" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview"
