--- a/app/src/main/res/drawable/line_category.xml
+++ b/app/src/main/res/drawable/line_category.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="5dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/milk" />
-    <corners android:radius="10dp" />
-
-    <solid android:color="@color/eden" />
+        android:color="@color/boltgun_metal" />
 </shape>
-
