--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -26,11 +26,11 @@
             android:id="@+id/image_movies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="@dimen/margin_horizontalTwo"
+            android:layout_marginVertical="@dimen/margin_verticalTwo"
             android:background="@color/milk"
-            android:minWidth="130dp"
-            android:minHeight="160dp"
+            android:minWidth="@dimen/minWidth"
+            android:minHeight="@dimen/minHeight"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/youtube_player_view"
@@ -41,10 +41,10 @@
             android:id="@+id/text_movies_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
+            android:layout_marginHorizontal="@dimen/margin_horizontal"
             android:fontFamily="@font/bitter_bold_italic"
             android:text="@{setData.title}"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_sizeTwo"
             app:layout_constraintStart_toEndOf="@id/image_movies"
             app:layout_constraintTop_toBottomOf="@id/btn_insert"
             tools:text="Batman" />
@@ -53,8 +53,8 @@
             android:id="@+id/btn_insert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="@dimen/margin_horizontal"
+            android:layout_marginVertical="@dimen/margin_vertical"
             android:contentDescription="@string/image_favorite"
             android:src="@drawable/ic_baseline_bookmark_add"
             app:layout_constraintEnd_toEndOf="parent"
@@ -64,7 +64,7 @@
             android:id="@+id/textView_category"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15dp"
+            android:layout_marginHorizontal="@dimen/margin_horizontalThree"
             android:text="@{setData.genres.get(0).name}"
             app:layout_constraintStart_toEndOf="@id/image_movies"
             app:layout_constraintTop_toBottomOf="@id/text_movies_name"
@@ -74,7 +74,7 @@
             android:id="@+id/textView_average"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="25dp"
+            android:layout_marginHorizontal="@dimen/margin_horizontalFour"
             android:text="@{setData.vote_average.toString()}"
             app:layout_constraintStart_toEndOf="@id/textView_category"
             app:layout_constraintTop_toBottomOf="@id/text_movies_name"
@@ -83,8 +83,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
-            android:layout_marginVertical="5dp"
+            android:layout_marginHorizontal="@dimen/margin_horizontalTwo"
+            android:layout_marginVertical="@dimen/margin_verticalThree"
             android:contentDescription="@string/image_average"
             android:src="@drawable/ic_baseline_star"
             app:layout_constraintStart_toEndOf="@id/textView_average"
@@ -94,7 +94,7 @@
             android:id="@+id/text_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
+            android:layout_marginHorizontal="@dimen/margin_horizontal"
             app:formatDate="@{setData.release_date}"
             app:layout_constraintBottom_toTopOf="@id/text_movies_detail"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,12 +105,12 @@
             android:id="@+id/text_movies_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginVertical="20dp"
-            android:maxWidth="250dp"
+            android:layout_marginHorizontal="@dimen/margin_horizontal"
+            android:layout_marginVertical="@dimen/margin_verticalTwo"
+            android:maxWidth="@dimen/maxWidth"
             android:maxLines="2"
-            android:minWidth="220dp"
-            android:minHeight="100dp"
+            android:minWidth="@dimen/minWidthTwo"
+            android:minHeight="@dimen/minHeightTwo"
             android:text="@{setData.overview}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/image_movies"
