ViewPagerFragment.kt is update

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,9 @@
 
     <dimen name="minHeightThree">250dp</dimen>
     <dimen name="minWidthThree">250dp</dimen>
+
+    <dimen name="input_boxStrokeWith">2dp</dimen>
+
+
+
 </resources>
