--- a/app/src/main/res/layout/fragment_dialog.xml
+++ b/app/src/main/res/layout/fragment_dialog.xml
@@ -7,6 +7,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="20dp"
+        android:background="@drawable/line_layout_dialog"
         android:minWidth="@dimen/minWidthThree"
         android:minHeight="@dimen/minHeightThree">
 
@@ -17,10 +18,9 @@
             android:layout_marginVertical="@dimen/margin_verticalFour"
             android:fontFamily="@font/bitter_bold_italic"
             android:text="@string/categories"
+            android:textColor="@color/milk"
             android:textSize="@dimen/text_sizeThree"
             android:textStyle="bold"
-            android:textColor="@color/milk"
-            app:layout_constraintEnd_toStartOf="@id/btn_close"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -32,7 +32,6 @@
             android:contentDescription="@string/image_close"
             android:src="@drawable/ic_baseline_close"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/text_categories"
             app:layout_constraintTop_toTopOf="parent" />
 
         <com.google.android.material.button.MaterialButton
